# SWF

./: .gitignore  .playground.ipynb.icloud  3dViz.ipynb  AllRADecoder_basic.json  AllRADecoder_maxrE.json  Encode.ipynb  Evaluation.ipynb  Evaluation_Ambisonics+VBAP.ipynb  Evaluation_Ambisonics.ipynb  OSCserver.py  Optimization.ipynb  README.md  Relevant previous or current academic work.docx  Transcoding.ipynb  TrimeshTests.ipynb  TrismeshTests.ipynb  ambisonicsDecoder.json  coords.txt  encoder.txt  graphics.ipynb  index.html  index.md  loadmatrix.maxpat  optimal.py  oscsendrecieve.maxpat  playground.ipynb  pyproject.toml  realtimePanning.maxpat  requirements.txt  seeFilters.ipynb  swf.py  swfTests.ipynb  test.maxpat  triangles.txt  trimesh.py  utils.py  vbap_stuff.maxpat  vertices.txt
.ipynb_checkpoints/: 3dViz-checkpoint.ipynb  Encode-checkpoint.ipynb  Evaluation-checkpoint.ipynb  Evaluation_Ambisonics+VBAP-checkpoint.ipynb  Evaluation_Ambisonics-checkpoint.ipynb  IDHOAdecoder-checkpoint.txt  OSCserver-checkpoint.py  Optimization-checkpoint.ipynb  README-checkpoint.md  Transcoding-checkpoint.ipynb  TrimeshTests-checkpoint.ipynb  TrismeshTests-checkpoint.ipynb  constants-checkpoint.py  coords-checkpoint.txt  encoder-checkpoint.txt  graphics-checkpoint.ipynb  optimal-checkpoint.py  swf-checkpoint.py  swfTests-checkpoint.ipynb  triangles-checkpoint.txt  trimesh-checkpoint.py  utils-checkpoint.py  vertices-checkpoint.txt
swf/: __init__.py  constants.py  optimal.py  swf.py
testing/: Encode.ipynb  Optimization.ipynb  Plotting4Presi.ipynb  swfTests.ipynb
(+3 files in other folders)
